@@ -10,11 +10,14 @@ describe 'sample gem source code' do
     ruby.should reek_of(:Duplication, /Inline::C#build/, /io.puts/)
     ruby.should reek_of(:Duplication, /Inline::C#build/, /io.puts\("#endif"\)/)
     ruby.should reek_of(:Duplication, /Inline::C#build/, /io.puts\("#ifdef __cplusplus"\)/)
+    ruby.should reek_of(:Duplication, /Inline::C#build/, /module_name/)
+    ruby.should reek_of(:Duplication, /Inline::C#build/, /warn\("Output:\\n\#\{result\}"\)/)
     ruby.should reek_of(:Duplication, /Inline::C#crap_for_windoze/, /Config::CONFIG\["libdir"\]/)
     ruby.should reek_of(:Duplication, /Inline::C#generate/, /result.sub!\(\/\\A\\n\/, ""\)/)
     ruby.should reek_of(:Duplication, /Inline::C#generate/, /signature\["args"\]/)
     ruby.should reek_of(:Duplication, /Inline::C#generate/, /signature\["args"\].map/)
     ruby.should reek_of(:Duplication, /Inline::C#initialize/, /stack.empty?/)
+    ruby.should reek_of(:Duplication, /Inline::C#load/, /so_name/)
     ruby.should reek_of(:Duplication, /Inline::self.rootdir/, /env.nil?/)
     ruby.should reek_of(:Duplication, /Module#inline/, /Inline.const_get\(lang\)/)
     ruby.should reek_of(:FeatureEnvy, /Inline::C#strip_comments/, /src/)
@@ -36,6 +39,6 @@ describe 'sample gem source code' do
     ruby.should reek_of(:UncommunicativeName, /Inline::C#module_name/, /'x'/)
     ruby.should reek_of(:UncommunicativeName, /Inline::C#parse_signature/, /'x'/)
     ruby.should reek_of(:UtilityFunction, /Inline::C#strip_comments/)
-    ruby.report.should have_at_most(33).smells
+    ruby.report.should have_at_most(36).smells
   end
 end
