@@ -3,6 +3,8 @@
 === Minor enhancements
 * LargeClass now also warns about any class with > 9 instance variables (#6)
 * Uses ruby2ruby to display code better
+* Duplication notices more repeated method calls
+* Smells within blocks are now reported better
 
 == 1.1.0 2009-04-10
 
